Archive2/2f/56db952f4d6067/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘void func()’:
main.cpp:5:9: error: ‘int N::C::val’ is private
     int val;
         ^
main.cpp:11:15: error: within this context
     N::C o; o.val = 123; /* error */
               ^
